manifests/ai/sample-ai-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ai-service
  namespace: ai
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: ai-service.192.168.1.50.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-ai-service
                port:
                  number: 8000
